# unrooted

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/core/: index.html
api/io/: index.html
api/plot/: index.html
architecture/: index.html
assets/examples/: plotly_hx_styled.html  plotly_hxy.html  plotly_overlay_ratio.html  terminal_hx.txt  terminal_overlay.txt  terminal_overlay_ratio.txt
docs/: architecture.md  getting-started.md  hooks.py  index.md
docs/api/: core.md  io.md  plot.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  examples.md  histograms.md  loading-boost.md  loading-root.md  logos.md  plotting.md  resources.md  styling.md
getting-started/: index.html
resources/odd/: colors.json
resources/sd/: colors.json
search/: search_index.json
tests/examples/: example_boost_histogram.py  example_cli.py  example_efficiency_histogram.py  example_overlay_histograms.py  example_plotly_histogram.py  example_profile_histogram.py  example_root_histogram.py  example_spread_modes.py  example_styled_histogram.py  example_terminal_histogram.py
tests/unit_tests/: test_cli_draw_spec.py  test_cli_main.py  test_core_histogram.py  test_core_histogram_spread.py  test_core_scatter.py  test_io_boost_reader.py  test_io_root_reader.py  test_io_root_tree.py  test_plot_mpl_overlay.py  test_plot_mpl_scatter.py  test_plot_plotly_histogram.py  test_plot_plotly_overlay.py  test_plot_plotly_scatter.py  (+3 more)
unrooted/: __init__.py
(+44 files in other folders)
