[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unrooted"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "uproot",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.hatch.build.targets.wheel]
packages = ["unrooted"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
