[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unrooted"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "uproot",
    "matplotlib",
]

[project.scripts]
unrooted = "unrooted.cli.main:main"

[project.urls]
Homepage = "https://asalzburger.github.io/unrooted"
Repository = "https://github.com/asalzburger/unrooted"
Documentation = "https://asalzburger.github.io/unrooted"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "plotly>=5.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pillow",
    "plotly>=5.0",
]
plotly = [
    "plotly>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["unrooted"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
